--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -14,7 +14,7 @@
 
         </div>
         <div class="row rtl">
-          <div class="col-md-8">
+          <div class="col-8">
             <div>
 
               فروشنده
@@ -29,7 +29,7 @@
               {{invoice.bedehkar.name}}
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-4">
             <div>
               تاریخ :
 
