--- a/transport/templates/transport/includes/add-maintenance-invoice-app/template.html
+++ b/transport/templates/transport/includes/add-maintenance-invoice-app/template.html
@@ -126,6 +126,44 @@
           </div>
 
 
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">کیلومتر</label>
+
+              <input type="number" required class="form-control" v-model="kilometer" />
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">تعمیرکار</label>
+
+              <select   required class="form-control" v-model="service_man_id" >
+                {% for service_man in service_mans %}
+                  
+                <option value="{{service_man.id}}">{{service_man.person_account.person.full_name}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+
+          
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">نوع</label>
+
+              <select required class="form-control" v-model="maintenance_type" >
+                {% for typeee in maintenance_types %}
+                  
+                <option value="{{typeee}}">{{typeee}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+
+
+
           <div class="col-md-4"></div>
 
           <div class="col-md-12">
