--- a/transport/templates/transport/maintenance-invoice.html
+++ b/transport/templates/transport/maintenance-invoice.html
@@ -29,6 +29,13 @@
   <div class="col-md-12 ">
     {% include "accounting/includes/financial-document-lines-app/template.html" %}
   </div>
+  
+   {% if edit_financial_event_form %}
+  <div class="col-md-12">
+    {% include "accounting/includes/edit-financial-event-app/template.html" %}
+  </div>
+  {% endif %}
+
 
   {% if add_financial_document_line_form %}
   <div class="col-md-12">
