edit invoice OK

--- a/accounting/templates/accounting/asset.html
+++ b/accounting/templates/accounting/asset.html
@@ -19,7 +19,9 @@
                 {% include "attachments/includes/comments-app/template.html" %}
 
             </div>  
-            
+             <div class="col-md-12">
+                {% include "attachments/includes/locations-app/template.html" %}
+            </div>
             <div class="col-md-4">
                 {% include "attachments/includes/links-app/template.html" %}
 
