--- a/accounting/templates/accounting/includes/invoice-app/script.html
+++ b/accounting/templates/accounting/includes/invoice-app/script.html
@@ -10,3 +10,6 @@
 {% endif %}
 
 {% include "accounting/includes/invoice-lines-app/script.html" %}
+{% if edit_invoice_form %}
+{% include "accounting/includes/edit-invoice-app/script.html" %}
+{% endif %}
