--- a/transport/templates/transport/includes/add-maintenance-invoice-app/script.html
+++ b/transport/templates/transport/includes/add-maintenance-invoice-app/script.html
@@ -1,7 +1,7 @@
 {% include "accounting/includes/account-app/select-script.html" %}
 <script>
-  let add_invoice_app = new Vue({
-    el: "#add-invoice-app",
+  let add_maintenance_invoice_app = new Vue({
+    el: "#add-maintenance-invoice-app",
     data: {
     title: "",
     event_date: current_date,
@@ -11,12 +11,15 @@
     bestankar: false ,  
     bedehkar_code: "0", 
     bestankar_code: "0",   
-    kilometer:0,
+    kilometer:0,  
+    shipping_fee:0,
     vehicle_id:parseInt('{{vehicle.id}}'),
     maintenance_type:'',
     description:'',
     amount:0,
     service_man_id:0,
+    message:{show:false},
+    waiting:false,
     },
 
     components: {
@@ -26,10 +29,10 @@
       
 
       swap: function () {
-        let bed = add_invoice_app.bedehkar;
-        let bes = add_invoice_app.bestankar;
-        add_invoice_app.bedehkar = bes;
-        add_invoice_app.bestankar = bed;
+        let bed = add_maintenance_invoice_app.bedehkar;
+        let bes = add_maintenance_invoice_app.bestankar;
+        add_maintenance_invoice_app.bedehkar = bes;
+        add_maintenance_invoice_app.bestankar = bed;
       },
       to_price_colored: function (vall) {
         let colorr = "primary";
@@ -51,25 +54,25 @@
       },
 
       select_bedehkar: function () {
-          console.log(add_invoice_app.bedehkar);
-          select_account_by_code(add_invoice_app.bedehkar_code).done((data) => {
-              add_invoice_app.bedehkar = data.account;
+          console.log(add_maintenance_invoice_app.bedehkar);
+          select_account_by_code(add_maintenance_invoice_app.bedehkar_code).done((data) => {
+              add_maintenance_invoice_app.bedehkar = data.account;
               
               if (data.result === "SUCCEED") {
                   console.log(data.account);
             if (data.account.nature === "{{ONLY_BESTANKAR}}") {
                 return;
             }
-            add_invoice_app.bedehkar = data.account;
+            add_maintenance_invoice_app.bedehkar = data.account;
         } else {
-            add_invoice_app.bedehkar = false
+            add_maintenance_invoice_app.bedehkar = false
         }
         });
     },
 
     select_bestankar: function () {
-          console.log(add_invoice_app.bestankar);
-        select_account_by_code(add_invoice_app.bestankar_code).done((data) => {
+          console.log(add_maintenance_invoice_app.bestankar);
+        select_account_by_code(add_maintenance_invoice_app.bestankar_code).done((data) => {
           console.log(data);
           if (data.result === "SUCCEED") {
               console.log(data.account);
@@ -77,9 +80,9 @@
                   return;
                 }
                 
-                add_invoice_app.bestankar = data.account;
+                add_maintenance_invoice_app.bestankar = data.account;
           } else {
-            add_invoice_app.bestankar = false
+            add_maintenance_invoice_app.bestankar = false
           }
         });
       },
@@ -94,6 +97,7 @@
           service_man_id: parseInt(this.service_man_id),
           bestankar_id: parseInt(this.bestankar.id),
           kilometer:parseInt(this.kilometer),
+          shipping_fee:parseInt(this.shipping_fee),
           description:this.description,
           vehicle_id:parseInt('{{vehicle.id}}'),
           maintenance_type:this.maintenance_type,
@@ -109,6 +113,10 @@
               maintenance_invoices_app.maintenance_invoices.push(data.maintenance_invoice);
             }
           }
+          else{
+            show_message(add_maintenance_invoice_app,'موفق',data.message,'danger',3000)
+          }
+
         });
       },
     },
