--- a/transport/templates/transport/includes/add-vehicle-app/template.html
+++ b/transport/templates/transport/includes/add-vehicle-app/template.html
@@ -80,6 +80,20 @@
                 افزودن
               </button>
             </div>
+
+
+             <div class="col-md-12" v-if="message.show">
+           <div :class="'alert alert-' + message.color">
+            <h5 v-text="message.title">
+
+            </h5>
+            <div v-html="message.body">
+
+            </div>
+           </div>
+          </div>
+
+          
           </div>
         </form>
       </div>
