--- a/accounting/templates/accounting/includes/add-invoice-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-app/template.html
@@ -129,6 +129,12 @@
           <div class="col-md-4"></div>
 
           <div class="col-md-12">
+            <div v-if="message.show">
+              <div :class="'my-2 alert alert-'+message.color">
+                <h5 v-text="message.title"></h5>
+                <div v-html="message.body"></div>
+              </div>
+            </div>
             <button class="btn btn-success" type="submit">
               <i class="fa fa-plus"></i>
               افزودن
