--- a/transport/templates/transport/includes/add-maintenance-invoice-app/template.html
+++ b/transport/templates/transport/includes/add-maintenance-invoice-app/template.html
@@ -170,6 +170,12 @@
           </div>
 
 
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="exampleInputDate">توضیحات</label>
+
+              <input type="text"  required class="form-control" v-model="description" />
+            </div>
 
           <div class="col-md-4"></div>
 
