--- a/organization/templates/organization/includes/add-employee-app/template.html
+++ b/organization/templates/organization/includes/add-employee-app/template.html
@@ -122,7 +122,9 @@
               </div>
             </div>
 
-            <div class="col-md-4"></div>
+            <div class="col-md-12">
+              {% include "utility/includes/message-app/alert.html" %}
+            </div>
 
             <div class="col-md-12">
               <button class="btn btn-success" type="submit">
