--- a/organization/templates/organization/includes/add-organization-unit-app/template.html
+++ b/organization/templates/organization/includes/add-organization-unit-app/template.html
@@ -38,52 +38,52 @@
               <div class="row">
                 <div class="col-6">
                   <div class="form-group">
-                    <label for="account_code">حساب</label>
+                    <label for="person_account_code">حساب</label>
                     <input
                       type="text"
                       placeholder=""
                       class="form-control"
-                      id="account_code"
-                      @input="select_account()"
-                      v-model="account_code"
+                      id="person_account_code"
+                      @input="select_person_account()"
+                      v-model="person_account_code"
                     />
                   </div>
                 </div>
 
                 <div class="col-6 mt-3">
-                  <a :href="account.get_absolute_url" v-if="account.logo">
+                  <a :href="person_account.get_absolute_url" v-if="person_account.logo">
                     <div class="media">
-                      <img :src="account.logo" width="64" alt="" />
+                      <img :src="person_account.logo" width="64" alt="" />
                       <div class="mr-2 media-body">
                         <h5 class="my-2">
                           <span
-                            :class="'text-'+account.color"
-                            v-text="account.title"
+                            :class="'text-'+person_account.color"
+                            v-text="person_account.title"
                           ></span>
                         </h5>
                         <h6>
                           <span
-                            :class="'text-'+account.color"
-                            v-text="account.code"
+                            :class="'text-'+person_account.color"
+                            v-text="person_account.code"
                           ></span>
                         </h6>
 
                         <h6>
                           <span
-                            v-html="to_price_colored(account.balance)"
+                            v-html="to_price_colored(person_account.balance)"
                           ></span>
                         </h6>
 
                         <h6>
                           <small
-                            :class="'text-'+account.color"
-                            v-text="account.full_name"
+                            :class="'text-'+person_account.color"
+                            v-text="person_account.full_name"
                           ></small>
                         </h6>
                       </div>
                     </div>
                   </a>
-                  <div v-if="!account.id">
+                  <div v-if="!person_account.id">
                     <h5 class="text-danger">حساب انتخاب نشده است.</h5>
                   </div>
                 </div>
@@ -118,7 +118,9 @@
               </div>
             </div>
 
-            <div class="col-md-4"></div>
+            <div class="col-md-12">
+              {% include "utility/includes/message-app/alert.html" %}
+            </div>
 
             <div class="col-md-12">
               <button class="btn btn-success" type="submit">
