--- a/school/templates/school/includes/add-school-app/template.html
+++ b/school/templates/school/includes/add-school-app/template.html
@@ -24,9 +24,13 @@
         <form @submit.prevent="add_school()">
           <div class="row">
             <div class="col-md-12">
-              <div class="form-group">
-                <label for="">عنوان</label>
-                <input v-model="name" type="text" class="form-control" />
+              <div class="row">
+                <div class="col-6">
+                  <div class="form-group">
+                    <label for="name">نام آموزشگاه جدید</label>
+                    <input type="text" class="form-control" v-model="name" />
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -34,65 +38,69 @@
               <div class="row">
                 <div class="col-6">
                   <div class="form-group">
-                    <label for="account_code">حساب</label>
+                    <label for="person_account_code">حساب شخص</label>
                     <input
                       type="text"
                       placeholder=""
                       class="form-control"
-                      id="account_code"
-                      @input="select_account()"
-                      v-model="account_code"
+                      id="person_account_code"
+                      @input="select_person_account()"
+                      v-model="person_account_code"
                     />
                   </div>
                 </div>
 
                 <div class="col-6 mt-3">
-                  <a :href="account.get_absolute_url" v-if="account.id">
+                  <a
+                    :href="person_account.get_absolute_url"
+                    v-if="person_account.id"
+                  >
                     <div class="media">
-                      <img :src="account.logo" width="64" alt="" />
+                      <img :src="person_account.logo" width="64" alt="" />
                       <div class="mr-2 media-body">
                         <h5 class="my-2">
                           <span
-                            :class="'text-'+account.color"
-                            v-text="account.name"
+                            :class="'text-'+person_account.color"
+                            v-text="person_account.name"
                           ></span>
                         </h5>
                         <h6>
                           <span
-                            :class="'text-'+account.color"
-                            v-text="account.code"
+                            :class="'text-'+person_account.color"
+                            v-text="person_account.code"
                           ></span>
                         </h6>
 
                         <h6>
                           <span
-                            v-html="to_price_colored(account.balance)"
+                            v-html="to_price_colored(person_account.balance)"
                           ></span>
                         </h6>
 
                         <h6>
                           <small
-                            :class="'text-'+account.color"
-                            v-text="account.full_name"
+                            :class="'text-'+person_account.color"
+                            v-text="person_account.full_name"
                           ></small>
                         </h6>
                       </div>
                     </div>
                   </a>
-                  <div v-if="!account.id">
+                  <div v-if="!person_account.id">
                     <h5 class="text-danger">حساب انتخاب نشده است.</h5>
                   </div>
                 </div>
               </div>
-            </div>
-
-            <div class="col-md-4"></div>
+            </div> 
 
             <div class="col-md-12">
               <button class="btn btn-success" type="submit">
                 <i class="fa fa-plus"></i>
                 افزودن
               </button>
+            </div>
+            <div class="col-md-12  mt-2">
+              {% include "utility/includes/message-app/alert.html" %}
             </div>
           </div>
         </form>
