--- a/market/templates/market/includes/add-shop-app/script.html
+++ b/market/templates/market/includes/add-shop-app/script.html
@@ -40,6 +40,7 @@
                 const payload = {
                     csrfmiddlewaretoken: csrfmiddlewaretoken,
                     product_id: parseInt("{{product.id}}"),
+                    supplier_id: parseInt("{{me_supplier.id}}"),
                     level: this.level,
                     available: this.available,
                     unit_price: this.unit_price,
