--- a/market/templates/market/includes/supplier-app/navbar.html
+++ b/market/templates/market/includes/supplier-app/navbar.html
@@ -1,8 +1,7 @@
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle text-right" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
-
-      {{me_supplier.person.full_name}}
+ فروشنده
 
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
