--- a/market/templates/market/includes/product-shops-app/component.html
+++ b/market/templates/market/includes/product-shops-app/component.html
@@ -1,8 +1,16 @@
 <div class="row rtl">
   <div class="col-3">
-    <a :href="shop.supplier.get_absolute_url"
-      ><span v-text="shop.supplier.person.full_name"></span
-    ></a>
+    <div>
+      <a :href="shop.supplier.get_absolute_url"
+        ><span v-text="shop.supplier.person_account.person.full_name"></span
+      ></a>
+    </div>
+    <div>
+      <small>
+        <small class="text-muted"> موجود برای </small>
+        <span v-text="shop.level"></span>
+      </small>
+    </div>
   </div>
   <div class="col-6">
     <h6>
@@ -33,15 +41,22 @@
     </div>
   </div>
   <div class="col-3">
+    <h6>
+      هر
+      <span v-text="shop.unit_name"></span>
+    </h6>
     <h5 class="text-danger">
       <span
         v-text="to_price(shop.unit_price-(shop.discount_percentage*shop.unit_price/100))"
       ></span>
       {{CURRENCY}}
     </h5>
+    {% if add_cart_line_form %}
+
     <button class="btn btn-danger" @click="add_to_basket(shop)">
       <h5 class="text-center">خرید اینترنتی</h5>
     </button>
+    {% endif %}
     <div>
       {% if perms.market.change_shop %}
       <a target="_blank" :href="shop.get_edit_url" title="ویرایش">
@@ -57,7 +72,7 @@
 
   <div class="col-md-12">
     <div v-if="message.show" :class="'alert alert-'+message.color">
-        <span v-text="message.body"></span>
+      <span v-text="message.body"></span>
     </div>
     <hr />
   </div>
