--- a/attachments/templates/attachments/includes/page-like-app/template.html
+++ b/attachments/templates/attachments/includes/page-like-app/template.html
@@ -1,7 +1,7 @@
 {% if not dont_show_page_likes %}
 
 
-{% if profile %}
+{% if me_person %}
 
 <span id="page-like-app" class="text-right" v-cloak>
     <span @click="toggle_like()" class="" style="cursor: pointer;" :title="likes_count_message()">
