--- a/market/templates/market/product.html
+++ b/market/templates/market/product.html
@@ -49,7 +49,9 @@
     </div>
     {% endif %}
 
-
+    <div class="col-lg-6">
+        {% include "attachments/includes/comments-app/template.html" %}
+    </div>
     <div class="col-md-12">
         {% include "accounting/includes/product-app/card.html" %}
     </div>
