--- a/market/templates/market/includes/product-shops-app/component.html
+++ b/market/templates/market/includes/product-shops-app/component.html
@@ -53,7 +53,7 @@
     </h5>
     {% if add_cart_line_form %}
 
-    <button class="btn btn-danger" @click="add_to_basket(shop)">
+    <button class="btn btn-danger" @click="add_to_cart(shop)">
       <h5 class="text-center">خرید اینترنتی</h5>
     </button>
     {% endif %}
