--- a/templates/phoenix/includes/common-script.html
+++ b/templates/phoenix/includes/common-script.html
@@ -75,3 +75,8 @@
 {% if PUSHER_IS_ENABLE %}
 {% include "phoenix/includes/pusher-script.html" %}
 {% endif %}
+
+{% if APP_SCRIPT %}
+
+{% include APP_SCRIPT %}
+{% endif %}
