--- a/templates/phoenix/includes/navbar.html
+++ b/templates/phoenix/includes/navbar.html
@@ -45,9 +45,9 @@
         </div>
       </li>
       
-      {% if NAVBAR_ITEMS_LAYOUT %}
+      {% if APP_NAVBAR %}
        
-      {% include NAVBAR_ITEMS_LAYOUT %}
+      {% include APP_NAVBAR %}
       {% endif %}
 
  
