--- a/market/templates/market/includes/cart-items-app/navbar-script.html
+++ b/market/templates/market/includes/cart-items-app/navbar-script.html
@@ -4,6 +4,9 @@
         el:"#cart-items-navbar-app",
         data:{
             cart_items:cart_items_navbar,
+        },
+        methods:{
+            to_price:vall=>to_price(vall),
         }
     })
 </script>>
