--- a/market/templates/market/includes/cart-items-app/script.html
+++ b/market/templates/market/includes/cart-items-app/script.html
@@ -1,5 +1,9 @@
 <script>
     let cart_items=JSON.parse("{{cart_items_s|escapejs}}")
+    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
+    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
+    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
+    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
     let cart_items_app=new Vue({
         el:"#cart-items-app",
         data:{
