--- a/market/templates/market/includes/product-shops-app/script.html
+++ b/market/templates/market/includes/product-shops-app/script.html
@@ -3,40 +3,37 @@
 
   let shop_component_template = `{% include 'market/includes/product-shops-app/component.html' %}`;
 
-
   let product_shop_component = Vue.component("product-shop-component", {
     data: function () {
       return {
-        message: {show:false},
-        waiting:false
+        message: { show: false },
+        waiting: false,
+        quantity:1,
       };
     },
     methods: {
       to_price: (vall) => to_price(vall),
 
-      add_to_basket: function (shop) {
+      add_to_cart: function (shop) {
         console.log(shop);
-        let msg=this.message
-        let body=JSON.stringify(shop)
-        this.message={show:true,body:body,color:'success'}
-         
-      },
-      delete_shop: function (comment_id) {
-        this.confirm_delete = false;
+        comment_component.waiting = true;
 
-        let url = url_delete_comment;
+        let url = "{% url 'market:add_cart_item' %}";
         let payload = {
-          comment_id: comment_id,
+          shop_id: shop.id,
+          quantity: parseInt(this.quantity),
           csrfmiddlewaretoken: csrfmiddlewaretoken,
         };
         let posting = $.post(url, payload);
         posting.done(function (data) {
+          comment_component.waiting = false;
           console.log(data);
           if (data.result === "SUCCEED") {
-            comments_app.comments = comments_app.comments.filter((comment) => {
-              return comment.id != comment_id;
-            });
-            comment_component.confirm_delete = false;
+            show_message(product_shops_app,'موفق',data.message,'success',3000)
+          }
+          else{
+            show_message(product_shops_app,'خطا',data.message,'danger',3000)
+
           }
         });
       },
@@ -45,13 +42,12 @@
     template: shop_component_template,
   });
 
-
-
-
   let product_shops_app = new Vue({
     el: "#product-shops-app",
     data: {
       shops: shops_for_product_shops_app,
+      message:{show:false},
+      waiting:true,
     },
     components: {
       product_shop_component,
