--- a/market/templates/market/customer.html
+++ b/market/templates/market/customer.html
@@ -75,9 +75,14 @@
             </div>
         </div>
     </div>
+    <div class="col-md-12">
+        {% include "market/includes/cart-items-app/template.html" %}
+    </div>
 </div>
 {% endblock content %}
 
 
 {% block script %}
+{% include "market/includes/cart-items-app/script.html" %}
+
 {% endblock script %}
