--- a/market/templates/market/includes/cart-items-app/script.html
+++ b/market/templates/market/includes/cart-items-app/script.html
@@ -1,13 +1,13 @@
 <script>
     let cart_items=JSON.parse("{{cart_items_s|escapejs}}")
-    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
-    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
-    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
-    console.log("dddddddddddddddddddddddddddddddddddddddddddddddddd")
+     
     let cart_items_app=new Vue({
         el:"#cart-items-app",
         data:{
             cart_items:cart_items,
+        },
+        methods:{
+            to_price:vall=>to_price(vall),
         }
     })
 </script>
