--- a/market/templates/market/includes/cart-items-app/template.html
+++ b/market/templates/market/includes/cart-items-app/template.html
@@ -34,11 +34,23 @@
                         {% if not product %}
 
                         <td>
-                            <a :href="cart_item.shop.product.get_absolute_url">
+                            <div class="media"> 
+                                <a :href="cart_item.shop.product.get_market_absolute_url">
 
-                                <span v-text="cart_item.shop.product.title">
-                                </span>
-                            </a>
+                                    <img :src="cart_item.shop.product.thumbnail" width="64" class="rounded" alt="">
+                                </a>
+
+                                <div class="media-body mr-2">
+                                   <h6>
+                                       <a :href="cart_item.shop.product.get_market_absolute_url">
+                                        <span v-text="cart_item.shop.product.title">
+                                        </span>
+                                    </a>
+                                   </h6>
+                                </div> 
+                            </div>
+
+                               
                         </td>
                         {% endif %}
                         {% if not customer %}
@@ -56,7 +68,7 @@
                         <td>
                             <a :href="cart_item.shop.supplier.get_absolute_url">
 
-                                <span v-text="cart_item.shop.supplier.title">
+                                <span v-text="cart_item.shop.supplier.person_account.person.full_name">
                                 </span>
                             </a>
                         </td>
