--- a/accounting/templates/accounting/includes/add-invoice-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/template.html
@@ -105,7 +105,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="">تعداد</label>
-                <input v-model="quantity" type="number" class="form-control" />
+                <input v-model="quantity" type="text" class="form-control" />
               </div>
             </div>
             <div class="col-md-4">
