--- a/accounting/templates/accounting/includes/add-person-account-app/template.html
+++ b/accounting/templates/accounting/includes/add-person-account-app/template.html
@@ -36,12 +36,11 @@
                   @input="select_person()"
                   required
                   class="form-control"
-                  v-model="person.id"
+                  v-model="person_id"
                 />
               </div>
-            </div>
-            <div class="col-md-6">
-              <div v-if="person.full_name">
+
+                <div v-if="person.full_name">
                 <a :href="person.get_absolute_url">
                   <div class="media">
                     <img
@@ -51,12 +50,50 @@
                       alt=""
                     />
                     <div class="media-body mr-2">
-                      <span v-text="person.full_name"></span>
+                      <h6 :class="'text-'+person.color" v-text="person.full_name"></h6>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
+            </div>
+
+             <div class="col-md-6">
+              <div class="form-group">
+                <label for=""
+                  >شناسه حساب
+
+                  <a href="{% url 'accounting:accounts' %}" target="_blank"
+                    >همه حساب ها</a
+                  >
+                </label>
+                <input
+                  type="text"
+                  @input="select_account()"
+                  required
+                  class="form-control"
+                  v-model="account_code"
+                />
+              </div>
+                <div v-if="account.title">
+                <a :href="account.get_absolute_url">
+                  <div class="media">
+                    <img
+                      :src="account.image"
+                      class="rounded-circle"
+                      width="48"
+                      alt=""
+                    />
+                    <div class="media-body mr-2">
+                      <h6 :class="'text-'+account.color" v-text="account.title"></h6>
+                      <h6 class="small" v-text="account.code"></h6>
                     </div>
                   </div>
                 </a>
               </div>
             </div>
+
+            
             <div class="col-md-3">
               <div class="form-group">
                 <label for="">رنگ</label>
